--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -15,8 +15,6 @@ items:
   - name: Vanliga frågor och svar
     displayName: FAQ
     href: faq.md
-  - name: Nyheter
-    href: whats-new.md
   expanded: true
 - name: Självstudier
   items:
@@ -41,8 +39,6 @@ items:
     - name: 6 – Få åtkomst till webbtjänsten
       displayName: consume
       href: walkthrough-6-access-web-service.md
-  - name: Komma ingång i R
-    href: r-quickstart.md
 - name: Exempel
   items:
   - name: Tillgängliga datauppsättningar
@@ -120,6 +116,8 @@ items:
         href: debug-models.md
     - name: Använd R och Python
       items:
+      - name: Komma ingång i R
+        href: r-quickstart.md
       - name: Köra R-skript
         href: extend-your-experiment-with-r.md
       - name: Skapa anpassade R-moduler
@@ -208,21 +206,25 @@ items:
     href: /rest/api/machinelearning
 - name: Resurser
   items:
+  - name: Tjänstuppdateringar
+    href: https://azure.microsoft.com/updates/?product=machine-learning-studio
+  - name: Få support
+    href: support-aml-studio.md
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/machine-learning/
   - name: Utvecklarguide för R
     href: ../r-developers-guide.md
-  - name: Anpassade neurala nätverk med Net#
+  - name: Anpassade neurala nätverk (Net#)
     href: azure-ml-netsharp-reference-guide.md
-  - name: Få support
-    href: support-aml-studio.md
   - name: Jämför våra ML-produkter
     href: ../service/overview-more-machine-learning.md
-ms.openlocfilehash: 12fa71315c1cb43570505d2428804f4a5348a266
-ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
+ms.openlocfilehash: 27cd57a52b80006482f50f96120e8eaf8a8cb00e
+ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55156096"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55512201"
