--- a/articles/active-directory/users-groups-roles/index.yml
+++ b/articles/active-directory/users-groups-roles/index.yml
@@ -1,12 +1,12 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: feb192b32928ef66f5722b4a0141eab437bddd27
-ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
+ms.openlocfilehash: 00752e0b42b907699e9f314c2f216b69c9d3b2e8
+ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55203359"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55506744"
 documentType: LandingData
-title: Dokumentation för användarhantering i Azure Active Directory
+title: Dokumentation om Enterprise-användarhantering – Azure Active Directory
 metadata:
   document_id: 
   title: Dokumentation för användare, grupper, roller och licenser i Azure Active Directory
@@ -17,7 +17,7 @@ metadata:
   manager: mtillman
   ms.service: active-directory
   ms.topic: landing-page
-  ms.date: 08/12/2018
+  ms.date: 01/31/2019
   ms.author: curtand
 abstract:
   description: Användarhanteringsverktyg i Azure AD som tilldelning av grupper och administratörsroller hjälper dig att utföra dina vanligaste uppgifter snabbare och öka tillväxten. Du kan tilldela licenser eller åtkomst till SaaS-appar till grupper istället för till enskilda användare, eller delegera behörigheter för att distribuera administrationskostnaderna för identitetshanteringen i Azure AD.
