--- a/articles/avere-vfxt/toc.yml
+++ b/articles/avere-vfxt/toc.yml
@@ -43,15 +43,15 @@ items:
     items:
     - name: Kompletterande dokumentation
       href: avere-vfxt-additional-resources.md
-    - name: Skapa klusterrollen utan kontrollant
-      href: avere-vfxt-pre-role.md
+    - name: Anpassad åtkomstroll till kontrollenheten
+      href: avere-vfxt-controller-role.md
     - name: Konfiguration av DNS för Avere-kluster
       href: avere-vfxt-configure-dns.md
     - name: Auktorisera icke-ägare för att distribuera Avere vFXT
       href: avere-vfxt-non-owner.md
-ms.openlocfilehash: 319745fad14ca3cce97e8735def901f380132eff
-ms.sourcegitcommit: 8d88a025090e5087b9d0ab390b1207977ef4ff7c
+ms.openlocfilehash: ee0f2be03f44e1d458c118f5d5d963824922f99a
+ms.sourcegitcommit: a7331d0cc53805a7d3170c4368862cad0d4f3144
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/21/2018
-ms.locfileid: "52273719"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55300336"
