--- a/articles/cognitive-services/Bing-Entities-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Entities-Search/toc.yml
@@ -5,6 +5,9 @@ items:
   items:
   - name: Vad är entitetssökning i Bing?
     href: search-the-web.md
+  - name: 'Jämför API: erna för Bing-sökresultat'
+    href: ../Bing-Web-Search/bing-api-comparison.md
+    maintainContext: true
 - name: Snabbstarter för REST API
   items:
   - name: C#
@@ -44,12 +47,13 @@ items:
     href: https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Entity+Search
 - name: Instruktionsguider
   items:
-  - name: Använda och visa krav
-    href: use-display-requirements.md
   - name: Ändra storlek på och beskär miniatyrer
     href: resize-and-crop-thumbnails.md
 - name: Referens
   items:
+  - name: Användnings- och visningskrav för API:er för Bing-sökresultat
+    href: ../Bing-Web-Search/use-display-requirements.md
+    maintainContext: true
   - name: API för entitetsökning i Bing v7
     href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-entities-api-v7-reference
   - name: SDK:er
@@ -86,9 +90,9 @@ items:
     href: entity-search-endpoint.md
   - name: Analys för API för entitetssökning i Bing
     href: bing-entity-stats.md
-ms.openlocfilehash: a0f92f5b3ef8f0ea24393da1199422b032a57f06
-ms.sourcegitcommit: 295babdcfe86b7a3074fd5b65350c8c11a49f2f1
+ms.openlocfilehash: 919d44bbf41397cf58c06cfe2eff56867546b61e
+ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/27/2018
-ms.locfileid: "53789551"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55509940"
