--- a/articles/cognitive-services/bing-local-business-search/toc.yml
+++ b/articles/cognitive-services/bing-local-business-search/toc.yml
@@ -6,12 +6,15 @@ items:
   items:
   - name: Vad är API:et för sökning efter lokala företag i Bing?
     href: overview.md
+  - name: 'Jämför API: erna för Bing-sökresultat'
+    href: ../Bing-Web-Search/bing-api-comparison.md
+    maintainContext: true
   expanded: true
 - name: Snabbstarter
   items:
   - name: REST-API
     items:
-    - name: Använda C#
+    - name: Använd C#
       href: quickstarts/local-quickstart.md
     - name: Använda Java
       href: quickstarts/local-search-java-quickstart.md
@@ -31,7 +34,8 @@ items:
 - name: Referens
   items:
   - name: Använda och visa krav
-    href: use-display-requirements.md
+    href: ../Bing-Web-Search/use-display-requirements.md
+    maintainContext: true
   - name: API-referens för sökning efter lokala företag
     href: local-search-reference.md
 - name: Resurser
@@ -40,9 +44,9 @@ items:
     href: https://azure.microsoft.com/en-us/try/cognitive-services/?api=bing-web-search-api
   - name: Prisinformation
     href: https://azure.microsoft.com/en-us/pricing/details/cognitive-services/search-api/
-ms.openlocfilehash: d120c19aa2b028fe54bec90c22f3e9bcf1bb4355
-ms.sourcegitcommit: 6678e16c4b273acd3eaf45af310de77090137fa1
+ms.openlocfilehash: 14c891c74accb4cca537e24ddbdcb99ae36618c9
+ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/01/2018
-ms.locfileid: "50748806"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55507509"
