--- a/articles/containers/index.yml
+++ b/articles/containers/index.yml
@@ -1,21 +1,21 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f8083d9db71b9f3c7d80444d574ed5c89b918f6c
-ms.sourcegitcommit: 7824e973908fa2edd37d666026dd7c03dc0bafd0
+ms.openlocfilehash: 89376bf654a23b37e004a1b9b00e32a0c2ac3e2a
+ms.sourcegitcommit: 5978d82c619762ac05b19668379a37a40ba5755b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/10/2018
-ms.locfileid: "48900371"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55495080"
 documentType: LandingData
 title: Azure for Containers
 metadata:
   document_id: 
-  title: Azure for Containers – Självstudier, API-referens
-  description: Kom igång med att utveckla appar med Azure och använd resurserna nedan för att hitta bra snabbstarter, självstudier och verktyg för containrar.
+  title: Azure for Containers – snabbstarter, självstudier, API-referens
+  description: Kom igång med att hantera och distribuera containerappar med Azure med hjälp av snabbstarter, självstudier och verktyg för containrar.
   keywords: Azure, Containers, Docker, API, Kubernetes
-  author: bketelsen
-  ms.author: brketels
-  manager: listonb
-  ms.date: 09/14/2017
+  author: dlepow
+  ms.author: danlep
+  manager: jeconnoc
+  ms.date: 01/08/2019
   ms.topic: article
   ms.prod: azure
   featureFlags:
@@ -26,24 +26,7 @@ metadata:
 sections:
 - items:
   - type: markdown
-    text: >
-      Kom igång med att utveckla appar med Azure och använd resurserna nedan för att hitta bra självstudier och verktyg för containrar.
-- items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 2
-    items:
-    - href: https://docs.microsoft.com/azure/container-instances/container-instances-quickstart
-      html: <p>Skapa en behållarbaserad app med Azure Container Instances</p>
-      image:
-        src: https://docs.microsoft.com/media/common/i_get-started.svg
-      title: Kom igång
-    - href: https://docs.microsoft.com/azure/container-service/kubernetes/cli-samples
-      html: <p>Azure CLI-exempel för Azure Container Service</p>
-      image:
-        src: https://docs.microsoft.com/media/common/i_code-samples.svg
-      title: Kodexempel
+    text: "Kom igång med att distribuera och hantera continerappar med Azure-verktyg och -tjänster för containar. \n"
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -73,36 +56,31 @@ sections:
       title: Köra en containerapp på begäran i Azure Container Instances
       image:
         src: /azure/media/index/containerinstances.svg
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
-    items:
-    - href: https://go.microsoft.com/fwlink/?linkid=2012827
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-      title: " Azure-administratör"
-- title: Exempel
-  items:
-  - type: list
-    style: unordered
-    items:
-    - html: <a href="https://azure.microsoft.com/resources/samples/app-service-java-deploy-image-from-acr-to-linux/">Kom igång med App Service – Hantera Linux-webbapp med Container Registry – i Java</a>
-    - html: <a href="https://azure.microsoft.com/resources/samples/service-fabric-containers/">Exempel på container för Service Fabric</a>
-    - html: <a href="https://azure.microsoft.com/resources/samples/container-service-python-manage/">Distribuera och anslut en Docker-container i ett Azure-kluster</a>
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Lär dig hur du använder Azure Kubernetes Service (AKS)
+    text: Lär dig hur du distribuerar, hanterar och uppdaterar containerappar med hjälp av Azure-tjänster
   - type: list
     style: unordered
     items:
-    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Skapa behållaravbildningar från ett program (Create container images from an application)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-acr">Ladda upp behållaravbildningar till Azure Container Registry (Upload container images to the Azure Container Registry)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-deploy-cluster">Distribuera ett AKS-kluster</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-deploy-application">Kör dina behållaravbildningar i Kubernetes (Run your container images in Kubernetes)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-scale">Skala ett program och Kubernetes-infrastruktur (Scale an application and Kubernetes infrastructure)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-app-update">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>
-    - html: <a href="/azure/aks/tutorial-kubernetes-monitor">Övervaka Kubernetes med Log Analytics</a>
+    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Skapa och distribuera en container till Azure Kubernetes Service</a>
+    - html: <a href="/azure/service-fabric/service-fabric-host-app-in-a-container">Skapa och distribuera en .NET-containerapp till Azure Service Fabric</a>
+    - html: <a href="/azure/app-service/containers/tutorial-multi-container-app">Skapa en app med flera behållare i Web App for Containers</a>
+    - html: <a href="/azure/container-registry/container-registry-tutorial-quick-task">Skapa och distribuera containeravbildningar med Azure Container Registry-uppgifter</a>
+    - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Skapa och distribuera en container till Azure Container Instances</a>
+- title: Utveckla dina färdigheter med Microsoft Learn
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
+    items:
+    - title: Kör Docker-behållare i Azure Container Instances
+      href: /learn/modules/run-docker-with-azure-container-instances/
+      image:
+        src: /learn/achievements/run-docker-with-azure-container-instances.svg
+        href: /learn/modules/run-docker-with-azure-container-instances/
+    - title: Skapa och lagra containeravbildningar med Azure Container Registry
+      href: /learn/modules/build-and-store-container-images/
+      image:
+        src: /learn/achievements/build-and-store-container-images.svg
+        href: /learn/modules/build-and-store-container-images/
