--- a/articles/containers/toc.yml
+++ b/articles/containers/toc.yml
@@ -1,82 +1,87 @@
+items:
 - name: Azure for Containers
   href: index.yml
   items:
-    - name: Kubernetes Service (AKS)
-      href: 'https://docs.microsoft.com/azure/aks/'
-      expanded: true
+  - name: Kubernetes Service (AKS)
+    href: https://docs.microsoft.com/azure/aks/
+    items:
+    - name: Introduktion till AKS
+      href: ../aks/intro-kubernetes.md
+    - name: Snabbstart – Distribuera ett AKS-kluster
+      href: ../aks/kubernetes-walkthrough.md
+    expanded: true
+  - name: Container Instances (ACI)
+    href: https://docs.microsoft.com/azure/container-instances/
+    items:
+    - name: Snabbstart – Skapa en containerinstans
+      href: https://docs.microsoft.com/azure/container-instances/container-instances-quickstart
+    - name: Självstudie – Skapa och distribuera en container
       items:
-        - name: Introduktion till AKS
-          href: ../aks/intro-kubernetes.md
-        - name: Distribuera ett AKS-kluster
-          href: ../aks/kubernetes-walkthrough.md
-    - name: Container Instances (ACI)
-      href: 'https://docs.microsoft.com/azure/container-instances/'
+      - name: 1 – Skapa containeravbildning
+        href: https://docs.microsoft.com/azure/container-instances/container-instances-tutorial-prepare-app
+      - name: 2 – Skapa containerregister
+        href: https://docs.microsoft.com/azure/container-instances/container-instances-tutorial-prepare-acr
+      - name: 3 – Distribuera app
+        href: https://docs.microsoft.com/azure/container-instances/container-instances-tutorial-deploy-app
+  - name: Container Registry (ACR)
+    href: https://docs.microsoft.com/azure/container-registry/
+    items:
+    - name: Snabbstart – Skapa ett register
+      href: https://docs.microsoft.com/azure/container-registry/container-registry-get-started-azure-cli
+    - name: Självstudie – Skapa containeravbildningar
       items:
-        - name: Snabbstart – Skapa en behållarinstans
-          href: 'https://docs.microsoft.com/azure/container-instances/container-instances-quickstart'
-        - name: Självstudie – Skapa och distribuera en behållare
-          items:
-            - name: 1 – Skapa behållaravbildning
-              href: 'https://docs.microsoft.com/azure/container-instances/container-instances-tutorial-prepare-app'
-            - name: 2 – Skapa behållarregister
-              href: 'https://docs.microsoft.com/azure/container-instances/container-instances-tutorial-prepare-acr'
-            - name: 3 – Distribuera app
-              href: 'https://docs.microsoft.com/azure/container-instances/container-instances-tutorial-deploy-app'
-    - name: Container Registry (ACR)
-      href: 'https://docs.microsoft.com/azure/container-registry/'
+      - name: 1 – Skapa avbildningar i Azure
+        href: ../container-registry/container-registry-tutorial-quick-task.md
+      - name: 2 – Automatisera skapandet av avbildningar
+        href: ../container-registry/container-registry-tutorial-build-task.md
+      - name: 3 – Grundläggande uppdateringar av avbildningar
+        href: ../container-registry/container-registry-tutorial-base-image-update.md
+  - name: Web App for Containers
+    href: https://docs.microsoft.com/azure/app-service/containers/app-service-linux-intro
+    items:
+    - name: Använda en anpassad Docker-avbildning för Azure Web App for Containers
+      href: https://docs.microsoft.com/azure/app-service/containers/tutorial-custom-docker-image
+    - name: Självstudie – App med flera behållare
+      href: https://docs.microsoft.com/azure/app-service/containers/tutorial-multi-container-app
+  - name: Service Fabric
+    href: https://docs.microsoft.com/azure/service-fabric/
+    items:
+    - name: Översikt – Service Fabric och containrar
+      href: https://docs.microsoft.com/azure/service-fabric/service-fabric-containers-overview
+    - name: Gör så här för att
       items:
-        - name: Skapa ett register – CLI
-          href: 'https://docs.microsoft.com/azure/container-registry/container-registry-get-started-azure-cli'
-        - name: Gör så här för att
-          items:
-            - name: Skicka/hämta en avbildning
-              href: 'https://docs.microsoft.com/azure/container-registry/container-registry-get-started-docker-cli'
-            - name: Visa lagringsplatser
-              href: 'https://docs.microsoft.com/azure/container-registry/container-registry-repositories'
-            - name: Skapa ett huvudnamn för tjänsten
-              href: 'https://docs.microsoft.com/azure/azure-resource-manager/resource-group-create-service-principal-portal?toc=%2fazure%2fcontainer-registry%2ftoc.json'
-            - name: Autentisera med ett register
-              href: 'https://docs.microsoft.com/azure/container-registry/container-registry-authentication'
-            - name: Använda ACR-webhooks
-              href: 'https://docs.microsoft.com/azure/container-registry/container-registry-webhook'
-    - name: Web App for Containers
-      href: 'https://docs.microsoft.com/azure/app-service/containers/app-service-linux-intro'
-      items:
-        - name: Använda en anpassad Docker-avbildning för Azure Web App for Containers
-          href: 'https://docs.microsoft.com/azure/app-service/containers/tutorial-custom-docker-image'
-    - name: Service Fabric
-      href: 'https://docs.microsoft.com/azure/service-fabric/'
-      items:
-        - name: Översikt – Service Fabric och behållare
-          href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-containers-overview'
-        - name: Gör så här för att
-          items:
-            - name: Skapa ett behållarprogram på Windows
-              href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-get-started-containers'
-            - name: Skapa ett behållarprogram på Linux
-              href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-get-started-containers-linux'
-            - name: Använd ett befintligt .NET-program i behållare
-              href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-host-app-in-a-container'
-    - name: Windows-behållare
-      href: 'https://docs.microsoft.com/azure/virtual-machines/windows/overview'
-      items:
-        - name: Snabbstart – Windows-behållare på Windows Server
-          href: 'https://docs.microsoft.com/virtualization/windowscontainers/quick-start/quick-start-windows-server'
-        - name: Om Windows-behållare
-          href: 'https://docs.microsoft.com/virtualization/windowscontainers/about/index'
-    - name: Referens
-      items:
-        - name: Azure Container Instances (az container)
-          href: 'https://docs.microsoft.com/cli/azure/container'
-        - name: Azure Container Service (az acs)
-          href: 'https://docs.microsoft.com/cli/azure/acs'
-        - name: Azure Container Registry (az acr)
-          href: 'https://docs.microsoft.com/cli/azure/acr'
-        - name: Web Apps for Containers (az appservice)
-          href: 'https://docs.microsoft.com/cli/azure/appservice'
-        - name: Azure App Service Web App (az webapp)
-          href: 'https://docs.microsoft.com/cli/azure/webapp'
-        - name: Azure Service Fabric (az sf)
-          href: 'https://docs.microsoft.com/cli/azure/sf'
-        - name: Azure Virtual Machines (az vm)
-          href: 'https://docs.microsoft.com/cli/azure/vm'
+      - name: Skapa ett containerprogram på Windows
+        href: https://docs.microsoft.com/azure/service-fabric/service-fabric-get-started-containers
+      - name: Skapa ett containerprogram på Linux
+        href: https://docs.microsoft.com/azure/service-fabric/service-fabric-get-started-containers-linux
+      - name: Använd ett befintligt .NET-program i containrar
+        href: https://docs.microsoft.com/azure/service-fabric/service-fabric-host-app-in-a-container
+  - name: Windows-container
+    href: https://docs.microsoft.com/azure/virtual-machines/windows/overview
+    items:
+    - name: Snabbstart – Windows-containrar på Windows Server
+      href: https://docs.microsoft.com/virtualization/windowscontainers/quick-start/quick-start-windows-server
+    - name: Om Windows-containrar
+      href: https://docs.microsoft.com/virtualization/windowscontainers/about/index
+  - name: Referens
+    items:
+    - name: Azure Container Instances (az container)
+      href: https://docs.microsoft.com/cli/azure/container
+    - name: Azure Container Service (az acs)
+      href: https://docs.microsoft.com/cli/azure/acs
+    - name: Azure Container Registry (az acr)
+      href: https://docs.microsoft.com/cli/azure/acr
+    - name: Web App for Containers (az appservice)
+      href: https://docs.microsoft.com/cli/azure/appservice
+    - name: Azure App Service Web App (az webapp)
+      href: https://docs.microsoft.com/cli/azure/webapp
+    - name: Azure Service Fabric (az sf)
+      href: https://docs.microsoft.com/cli/azure/sf
+    - name: Azure Virtual Machines (az vm)
+      href: https://docs.microsoft.com/cli/azure/vm
+ms.openlocfilehash: 9ee48a00784c0ca9fa00507e2956e34e7e6792d5
+ms.sourcegitcommit: 5978d82c619762ac05b19668379a37a40ba5755b
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55486239"
