--- a/articles/iot-edge/index.yml
+++ b/articles/iot-edge/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 39ff5ba2ae6a9d4cf48499d4e73974e531a492a3
-ms.sourcegitcommit: 6b7c8b44361e87d18dba8af2da306666c41b9396
+ms.openlocfilehash: 82ba644f844c59b59f449e137c64b767d5dffbff
+ms.sourcegitcommit: 698a3d3c7e0cc48f784a7e8f081928888712f34b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/12/2018
-ms.locfileid: "51564875"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55464032"
 documentType: LandingData
 title: Azure IoT Edge
 metadata:
@@ -15,7 +15,7 @@ metadata:
   ms.service: iot-edge
   services: iot-edge
   ms.topic: landing-page
-  ms.date: 06/21/2018
+  ms.date: 01/30/2019
   ms.author: kgremban
 abstract:
   description: Azure IoT Edge är en tjänst för Sakernas Internet (IoT) som bygger på IoT Hub. Den här tjänsten är avsedd för kunder som vill analysera data på enheter, dvs. ”vid gränsen”, i stället för i molnet. När delar av din arbetsbelastning flyttas till Edge kan dina enheter ägna mindre tid åt att skicka meddelanden till molnet och i stället reagera snabbare på tillståndsändringar.
@@ -47,15 +47,17 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Lär dig hur du installerar och konfigurerar IoT Edge, distribuerar moduler och använder Azure-tjänster som Stream Analytics ”vid gränsen”.
+    text: Lär dig hur du installerar och konfigurerar IoT Edge, distribuerar moduler och använder Azure-tjänster som Stream Analytics och Custom Vision ”vid gränsen”.
   - type: list
-    style: ordered
+    style: unordered
     items:
     - html: <a href="/azure/iot-edge/tutorial-deploy-function">Filtrera meddelanden med Azure Functions</a>
     - html: <a href="/azure/iot-edge/tutorial-deploy-stream-analytics">Hitta medelvärden med Azure Stream Analytics som en modul</a>
     - html: <a href="/azure/iot-edge/tutorial-deploy-machine-learning">Bedöma data med Azure Machine Learning som en modul</a>
+    - html: <a href="/azure/iot-edge/tutorial-deploy-custom-vision">Klassificera bilder med Custom Vision Service som en modul</a>
     - html: <a href="/azure/iot-edge/tutorial-csharp-module">Filtrera data med en C#-modul</a>
     - html: <a href="/azure/iot-edge/tutorial-python-module">Filtrera data med en Python-modul</a>
     - html: <a href="/azure/iot-edge/tutorial-node-module">Filtrera data med en Node.js-modul</a>
+    - html: <a href="/azure/iot-edge/tutorial-java-module">Filtrera data med en Java-modul</a>
     - html: <a href="/azure/iot-edge/tutorial-c-module">Filtrera data med en C-modul</a>
     - html: <a href="/azure/iot-edge/tutorial-store-data-sql-server">Lagra data på gränsen med SQL Server</a>
