--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -13,7 +13,7 @@ items:
     href: search-create-service-portal.md
   - name: Portalen
     items:
-    - name: Genomgång av portalbaserad import, index och frågor
+    - name: Läsa in och fråga ett index
       href: search-get-started-portal.md
     - name: Förbättra med AI (kognitiv sökning)
       href: cognitive-search-quickstart-blob.md
@@ -216,14 +216,14 @@ items:
         href: search-filters-facets.md
       - name: Filtrera uttryckssyntax
         href: https://docs.microsoft.com/rest/api/searchservice/odata-expression-syntax-for-azure-search
-    - name: Prestanda och optimering
-      href: search-performance-optimization.md
   - name: Administration och analys
     items:
     - name: Administration (portalen)
       href: search-manage.md
     - name: PowerShell (Azure Search)
       href: search-manage-powershell.md
+    - name: Prestanda och optimering
+      href: search-performance-optimization.md
     - name: Övervaka aktivitet och loggning
       href: search-monitor-usage.md
     - name: Sök efter trafikanalys
@@ -297,9 +297,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: e65adf41bc6555e8e2bcd74be07e6a1b2b96514d
-ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
+ms.openlocfilehash: 133f3e44b7efc81f13aba5db68269678ddac9554
+ms.sourcegitcommit: 698a3d3c7e0cc48f784a7e8f081928888712f34b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55203835"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55464236"
