--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -339,6 +339,8 @@ items:
         href: azure-security-threat-modeling-tool-releases-71509112.md
       - name: Threat Modeling Tool, uppdaterad version 7.1.51023.1 – 2018-11-01
         href: azure-security-threat-modeling-tool-releases-71510231.md
+      - name: Threat Modeling Tool, uppdaterad version 7.1.60126.1 – 2019-01-29
+        href: azure-security-threat-modeling-tool-releases-71601261.md
     - name: Åtgärder
       href: azure-security-threat-modeling-tool-mitigations.md
       items:
@@ -362,9 +364,9 @@ items:
         href: azure-security-threat-modeling-tool-sensitive-data.md
       - name: Sessionshantering
         href: azure-security-threat-modeling-tool-session-management.md
-ms.openlocfilehash: 5b3729f616c04a7c969706d51edbfbf74e34f32e
-ms.sourcegitcommit: a408b0e5551893e485fa78cd7aa91956197b5018
+ms.openlocfilehash: 47882afaa66f510238a236235a1be1152ae26de2
+ms.sourcegitcommit: a7331d0cc53805a7d3170c4368862cad0d4f3144
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/17/2019
-ms.locfileid: "54360164"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55301245"
