--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -825,6 +825,8 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Felsökningsguider
     href: https://github.com/Azure/Service-Fabric-Troubleshooting-Guides
+  - name: Vanliga säkerhetsattribut
+    href: service-fabric-security-attributes.md
   - name: Exempelkod
     href: http://aka.ms/servicefabricsamples
   - name: Supportalternativ
@@ -835,9 +837,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: a4337e82a5703b3ccfde9f77e4494ca042a79b64
-ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
+ms.openlocfilehash: daa2e26fe5182364c9f1b1ea40d00cafa92e1a13
+ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55163922"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55508631"
