--- a/articles/sql-database/index.yml
+++ b/articles/sql-database/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 0049468330a9fcb26f023de2a8adb5dfd1544321
-ms.sourcegitcommit: c2e61b62f218830dd9076d9abc1bbcb42180b3a8
+ms.openlocfilehash: 0f5c60b25ad305b9e76eebcc72639a596b407801
+ms.sourcegitcommit: 698a3d3c7e0cc48f784a7e8f081928888712f34b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 12/15/2018
-ms.locfileid: "53436814"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55457555"
 documentType: LandingData
 title: Dokumentation om Azure SQL Database
 metadata:
@@ -15,10 +15,11 @@ metadata:
   author: CarlRabeler
   manager: craigg
   ms.service: sql-database
+  ms.subservice: service
   ms.tgt_pltfrm: na
   ms.devlang: 
   ms.topic: overview
-  ms.date: 07/07/2018
+  ms.date: 01/25/2019
   ms.author: carlrab
 abstract:
   description: Azure SQL Database är en relationsdatabas-som-en-tjänst (DBaaS) som bygger på den senaste stabila versionen av Microsoft SQL Server Database-motorn. SQL Database är en högpresterande, tillförlitlig och säker databas som du kan använda för att skapa datadrivna program och webbplatser i valfritt programmeringsspråk, utan att behöva hantera infrastrukturen. Lär dig hur du använder SQL Database med våra snabbstarter, självstudier och exempel.
@@ -54,10 +55,10 @@ sections:
         src: media/index/i_scale.svg
       title: Skalbarhet
     - href: /azure/sql-database/sql-database-single-index
-      html: <p>Använd den enskilda databasen som hanteras av logiska servrar för dina SaaS-program och mikrotjänster som behöver en enkel databas med förutsägbara prestanda.</p>
+      html: <p>Använd den enskilda databasen som hanteras av en SQL Database-server för dina SaaS-program och mikrotjänster som behöver en enkel databas med förutsägbara prestanda.</p>
       image:
         src: media/index/i_db.svg
-      title: Enkel databas
+      title: Enskild databas
     - href: /azure/sql-database/sql-database-elastic-pool
       html: <p>Elastiska pooler i SQL Database är en enkel och kostnadseffektiv lösning för att hantera och skala flera databaser med varierande och oförutsägbara användningskrav.</p>
       image:
@@ -103,36 +104,36 @@ sections:
         src: media/index/logo_arm.svg
       title: Azure Resource Manager-mall
     rows:
-    - title: Skapa en enskild SQL Database
+    - title: Skapa en enkel databas
       values:
       - href: /azure/sql-database/sql-database-get-started-portal
       - href: /azure/sql-database/scripts/sql-database-create-and-configure-database-cli
       - href: /azure/sql-database/scripts/sql-database-create-and-configure-database-powershell
       - href: 
-    - title: Skapa hanterad SQL-instans
+    - title: Skapa en hanterad instans
       values:
       - href: /azure/sql-database/sql-database-managed-instance-get-started
       - href: https://medium.com/azure-sqldb-managed-instance/working-with-sql-managed-instance-using-azure-cli-611795fe0b44
       - href: https://blogs.msdn.microsoft.com/sqlserverstorageengine/2018/06/27/quick-start-script-create-azure-sql-managed-instance-using-powershell/
       - href: https://github.com/Azure/azure-quickstart-templates/tree/master/101-sqlmi-new-vnet
-    - title: Skapa elastisk SQL-pool
+    - title: Skapa en elastisk pool
       values:
       - href: 
       - href: /azure/sql-database/scripts/sql-database-move-database-between-pools-cli
       - href: /azure/sql-database/scripts/sql-database-move-database-between-pools-powershell
       - href: https://github.com/Azure/azure-quickstart-templates/tree/master/101-sql-elastic-pool-create
-    - title: Skala en enskild SQL Database
+    - title: Skala en enkel databas
       values:
       - href: 
       - href: /azure/sql-database/scripts/sql-database-monitor-and-scale-database-cli
       - href: /azure/sql-database/scripts/sql-database-monitor-and-scale-database-powershell
       - href: 
-    - title: Skala elastisk SQL-pool
+    - title: Skala en elastisk pool
       values:
       - href: 
       - href: /azure/sql-database/scripts/sql-database-scale-pool-cli
       - href: /azure/sql-database/scripts/sql-database-monitor-and-scale-pool-powershell
-    - title: Skala hanterad instans
+    - title: Skala en hanterad instans
       values:
       - href: 
       - href: https://medium.com/azure-sqldb-managed-instance/working-with-sql-managed-instance-using-azure-cli-611795fe0b44
@@ -147,11 +148,11 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Lär dig att skapa, hantera och migrera databaser med SQL DB
+    text: Lär dig att skapa, hantera och migrera databaser med SQL Database
   - type: list
     style: ordered
     items:
-    - html: Skapa och utforma schemat för en ny SQL-databas med <a href="/azure/sql-database/sql-database-design-first-database">SSMS</a> eller <a href="/azure/sql-database/sql-database-design-first-database-csharp">.NET</a>
+    - html: Skapa och utforma schemat för en ny enkel databas med <a href="/azure/sql-database/sql-database-design-first-database">SQL Server Management Studio</a> eller <a href="/azure/sql-database/sql-database-design-first-database-csharp">.NET</a>
     - html: Migrera en befintlig databas till Azure med hjälp av <a href="/azure/sql-database/sql-database-managed-instance-get-started-restore">Database RESTORE</a>, <a href="/azure/sql-database/sql-database-migrate-your-sql-server-database">Database Migration Assistant</a> eller <a href="/azure/sql-database/sql-database-import">BACPAC-import</a>
     - html: <a href="/azure/sql-database/sql-database-security-tutorial">Skydda din SQL-databas</a>
     - html: Distribuera dina data globalt med en <a href="/azure/sql-database/sql-database-implement-geo-distributed-database">geo-distribuerad databas</a>
