--- a/articles/terraform/index.yml
+++ b/articles/terraform/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 802e7e3c7c06c5027e0ff6ba384d1438d0edf010
-ms.sourcegitcommit: fbf0124ae39fa526fc7e7768952efe32093e3591
+ms.openlocfilehash: 5f8e4ead27c05ec9efd08628773ba698dbbcdbca
+ms.sourcegitcommit: 698a3d3c7e0cc48f784a7e8f081928888712f34b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54076152"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55458694"
 documentType: LandingData
 title: Dokumentation om Terraform på Azure
 metadata:
@@ -43,12 +43,13 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="/azure/terraform/terraform-create-k8s-cluster-with-tf-and-aks">Skapa ett Kubernetes-kluster med AKS och Terraform</a>.
+    - html: <a href="/azure/terraform/terraform-create-k8s-cluster-with-tf-and-aks">Skapa ett Kubernetes-kluster med AKS</a>.
+    - html: <a href="/azure/terraform/terraform-create-k8s-cluster-with-aks-applicationgateway-ingress">Skapa ett Kubernetes-kluster med Application Gateway som en inkommande kontrollant med AKS</a>.
     - html: <a href="/azure/terraform/terraform-vm-msi">Skapa en virtuell Terraform-dator med aktiverad MSI-autentisering med hjälp av en Azure Marketplace-avbildning</a>.
     - html: <a href="/azure/terraform/terraform-create-vm-cluster-module">Skapa ett belastningsutjämnat VM-kluster med Azure Terraform-moduler</a>.
     - html: <a href="/azure/terraform/terraform-create-vm-cluster-with-infrastructure">Skapa ett belastningsutjämnat VM-kluster i Azure Cloud Shell</a>.
-    - html: <a href="/azure/terraform/terraform-create-vm-scaleset-network-disks-hcl">Konfigurera en VM-skalningsuppsättning med nätverk och lagring.</a>
-    - html: <a href="/azure/terraform/terraform-create-vm-scaleset-network-disks-using-packer-hcl">Etablera en VM-skalningsuppsättning från en anpassad Packer-avbildning.</a>
+    - html: <a href="/azure/terraform/terraform-create-vm-scaleset-network-disks-hcl">Konfigurera en VM-skalningsuppsättning med nätverk och lagring</a>
+    - html: <a href="/azure/terraform/terraform-create-vm-scaleset-network-disks-using-packer-hcl">Etablera en VM-skalningsuppsättning från en anpassad Packer-avbildning</a>
 - title: Exempel
   items:
   - type: paragraph
