commit translated contents

--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -81,6 +81,8 @@ items:
       href: stream-analytics-job-reliability.md
     - name: Autentisera med hanterad identitet
       href: stream-analytics-managed-identities-adls.md
+    - name: Använda SQL-referens
+      href: sql-reference-data.md
   - name: Skapa lösningar
     items:
     - name: Twitter-attitydanalys
@@ -155,7 +157,7 @@ items:
       href: stream-analytics-troubleshoot-output.md
     - name: Frågelogik
       href: stream-analytics-troubleshoot-query.md
-    - name: Diagnostikloggar
+    - name: Aktivitets- och diagnostikloggar
       href: stream-analytics-job-diagnostic-logs.md
   - name: Integrera med Machine Learning
     items:
@@ -427,9 +429,9 @@ items:
     href: https://azure.microsoft.com/case-studies/?service=stream-analytics
   - name: Whitepaper-datablad – händelsebearbetning i realtid
     href: stream-analytics-real-time-event-processing-reference-architecture.md
-ms.openlocfilehash: a66aa2ae82ab9862de7a6a6be425268462c61755
-ms.sourcegitcommit: a1cf88246e230c1888b197fdb4514aec6f1a8de2
+ms.openlocfilehash: 63ca98d968397f7626341e9cfdece664bdde971e
+ms.sourcegitcommit: a65b424bdfa019a42f36f1ce7eee9844e493f293
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/16/2019
-ms.locfileid: "54352775"
+ms.lasthandoff: 02/04/2019
+ms.locfileid: "55695312"
