--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -6,6 +6,8 @@ items:
   - name: Machine Learning Studio
     displayName: overview
     href: what-is-ml-studio.md
+  - name: Jämför våra ML-produkter
+    href: ../service/overview-more-machine-learning.md
   - name: ML Studio-funktioner
     displayName: overview
     href: studio-overview-diagram.md
@@ -93,10 +95,6 @@ items:
     - name: Prova experiment i AI Gallery
       displayName: gallery
       href: sample-experiments.md
-    - name: Välja algoritmer
-      href: algorithm-choice.md
-    - name: Algoritmfacit
-      href: algorithm-cheat-sheet.md
     - name: Utvärdera och tolka resultaten
       items:
       - name: Utvärdera prestanda
@@ -118,6 +116,12 @@ items:
         href: custom-r-modules.md
       - name: Köra Python-skript
         href: execute-python-scripts.md
+  - name: Välja en algoritm
+    items:
+    - name: Välja algoritmer
+      href: algorithm-choice.md
+    - name: Algoritmfacit
+      href: algorithm-cheat-sheet.md
   - name: Distribuera modeller
     items:
     - name: Distribuera en webbtjänst
@@ -210,15 +214,11 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/machine-learning/
-  - name: Utvecklarguide för R
-    href: ../r-developers-guide.md
   - name: Anpassade neurala nätverk (Net#)
     href: azure-ml-netsharp-reference-guide.md
-  - name: Jämför våra ML-produkter
-    href: ../service/overview-more-machine-learning.md
-ms.openlocfilehash: 400e6a2e98b8d29018b135204eaefa7ae3a7d965
-ms.sourcegitcommit: 3aa0fbfdde618656d66edf7e469e543c2aa29a57
+ms.openlocfilehash: d6d4020d76c8eab2418b3b7ac5d26eaf93363870
+ms.sourcegitcommit: 947b331c4d03f79adcb45f74d275ac160c4a2e83
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 02/05/2019
-ms.locfileid: "55731435"
+ms.locfileid: "55746174"
