--- a/articles/cognitive-services/Bing-Entities-Search/index.yml
+++ b/articles/cognitive-services/Bing-Entities-Search/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f1db6f04a7e7bf32f861fd2eaf193e3cd25d9e12
-ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
+ms.openlocfilehash: 23c5ccd33e63f2cdc9a62925078c3d70d92e9165
+ms.sourcegitcommit: 039263ff6271f318b471c4bf3dbc4b72659658ec
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55167860"
+ms.lasthandoff: 02/06/2019
+ms.locfileid: "55748989"
 documentType: LandingData
 title: Dokumentation om API för entitetsökning i Bing
 metadata:
-  title: Dokumentation om entitetssökning i Bing – självstudier, snabbstarter, API-referenser | Microsoft Docs
+  title: Dokumentation om API för entitetssökning i Bing – självstudier, snabbstarter, API-referenser | Microsoft Docs
   description: Hur du använder API för entitetssökning i Bing för att hämta information om personer, platser eller andra definierade ämnen. Självstudier visar hur du skapar appar som använder tjänsten.
   services: cognitive-services
   author: mikedodaro
@@ -18,11 +18,32 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 02/07/2018
+  ms.date: 02/01/2019
   ms.author: v-gedod
 abstract:
-  description: API för entitetssökning i Bing returnerar information om entiteter som Bing bedömer som relevanta för en användares fråga.
+  description: Med API:et för entitetssökning i Bing kan dina program få information om identifierade entiteter i sökfrågor. Entiteter kan vara personer, platser, medietitlar med mera.
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/cognitive-services/bing-entities-search/overview
+      html: <p>Läs mer om API:et för entitetssökning i Bing</p>
+      image:
+        src: ../media/index/i_overview.svg
+      title: Söka efter entiteter
+    - href: /azure/cognitive-services/bing-entities-search/concepts/search-for-entities
+      html: <p>Lär dig hur du söker efter entiteter med API:et för entitetssökning i Bing.</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Skicka sökförfrågningar
+    - href: /azure/cognitive-services/bing-custom-search/hosted-ui
+      html: <p>Lär dig hur du skickar sökförfrågningar till API:et.</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Skicka sökfrågor
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -32,15 +53,15 @@ sections:
     items:
     - image:
         src: media/index/logo_csharp.svg
-      href: quickstarts/csharp
+      href: quickstarts/entity-sdk-csharp-quickstart
       text: C&#35;
     - image:
         src: media/index/logo_java.svg
-      href: quickstarts/java
+      href: quickstarts/entity-sdk-java-quickstart
       text: Java
     - image:
         src: media/index/logo_nodejs.svg
-      href: quickstarts/nodejs
+      href: quickstarts/entity-sdk-node-quickstart
       text: Node.js
     - image:
         src: media/index/logo_php.svg
@@ -48,7 +69,7 @@ sections:
       text: PHP
     - image:
         src: media/index/logo_python.svg
-      href: quickstarts/python
+      href: quickstarts/entity-sdk-python-quickstart
       text: Python
     - image:
         src: media/index/logo_ruby.svg
@@ -59,7 +80,7 @@ sections:
   - type: paragraph
     text: 'Lär dig att utveckla program med hjälp av API för entitetssökning i Bing:'
   - type: paragraph
-    text: <a href="tutorial-bing-entities-search-single-page-app">Enkelsidig webbapp</a> &#124; <a href="tutorial-bing-entities-search-single-page-app-source">Källkod</a>
+    text: <a href="tutorial-bing-entities-search-single-page-app">Enkelsidig webbapp</a>
 - title: Exempel
   items:
   - type: paragraph
