--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -66,12 +66,8 @@ items:
       href: classroom-labs/how-to-create-schedules.md
   - name: DevTest-labb
     items:
-    - name: Skapa ett labb
-      href: devtest-lab-create-lab.md
-    - name: Skapa en virtuell dator i labbet
-      href: devtest-lab-create-first-vm.md
-    - name: Ta bort ett labb eller en virtuell dator i ett labb
-      href: devtest-lab-delete-lab-vm.md
+    - name: Ange resursgrupp för virtuella labbdatorer
+      href: resource-group-control.md
     - name: Ange principer för labbet
       href: devtest-lab-get-started-with-lab-policies.md
     - name: Spara hemligheter i Azure Key Vault
@@ -101,6 +97,10 @@ items:
           href: devtest-lab-guidance-governance-application-migration-integration.md
     - name: Använd virtuella datorer i ett labb
       items:
+      - name: Skapa ett labb
+        href: devtest-lab-create-lab.md
+      - name: Ta bort ett labb eller en virtuell dator i ett labb
+        href: devtest-lab-delete-lab-vm.md
       - name: Skapa VM:ar
         href: devtest-lab-add-vm.md
       - name: Skapa och hantera tillgängliga virtuella datorer
@@ -223,9 +223,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=devtest-lab
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/devtest-lab/
-ms.openlocfilehash: 1fc989f61f5c11e06e2651326e0e7e7f51092253
-ms.sourcegitcommit: 5978d82c619762ac05b19668379a37a40ba5755b
+ms.openlocfilehash: 783aec352d79c56525751142e4e5e95697149dbc
+ms.sourcegitcommit: 947b331c4d03f79adcb45f74d275ac160c4a2e83
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/31/2019
-ms.locfileid: "55496728"
+ms.lasthandoff: 02/05/2019
+ms.locfileid: "55747296"
