--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -10,19 +10,19 @@ items:
 - name: Snabbstarter
   items:
   - name: Snabbstartsguide för enkel databas
-    href: sql-database-quickstart-guide.md
+    href: sql-database-single-database-quickstart-guide.md
   - name: Snabbstartsguide för hanterad instans
     href: sql-database-managed-instance-quickstart-guide.md
   - name: Skapa
     items:
     - name: Enskild databas
-      href: sql-database-get-started-portal.md
+      href: sql-database-single-database-get-started.md
     - name: Hanterad instans
       href: sql-database-managed-instance-get-started.md
   - name: Konfigurera
     items:
-    - name: Brandväggsregler för databasserver
-      href: sql-database-get-started-portal-firewall.md
+    - name: Brandväggsregler för IP-adress på servernivå
+      href: sql-database-server-level-firewall-rule.md
     - name: VM-klientanslutning till en hanterad instans
       href: sql-database-managed-instance-configure-vm.md
     - name: Punkt-till-plats-anslutning till en hanterad instans
@@ -97,6 +97,8 @@ items:
     href: sql-database-cli-samples.md
   - name: Azure PowerShell
     href: sql-database-powershell-samples.md
+  - name: Azure Resource Manager
+    href: sql-database-resource-manager-samples.md
 - name: Begrepp
   items:
   - name: Inköpsmodeller
@@ -225,7 +227,7 @@ items:
         href: sql-vulnerability-assessment.md
       - name: Hotidentifiering
         href: sql-database-threat-detection-overview.md
-    - name: Brandväggsregler för databasservers IP-adress
+    - name: Brandväggsregler för IP-adress på servernivå
       items:
       - name: Skapa och hantera
         href: sql-database-firewall-configure.md
@@ -710,9 +712,9 @@ items:
       href: sql-database-elastic-jobs-getting-started.md
     - name: Avinstallera elastiskt jobb (inaktuellt)
       href: sql-database-elastic-jobs-uninstall.md
-ms.openlocfilehash: fc900fc17f4dbd1ee1527fc8a84053408d83d98d
-ms.sourcegitcommit: 3aa0fbfdde618656d66edf7e469e543c2aa29a57
+ms.openlocfilehash: 9a04e463a7324b1021594a8fbefc5988ad8471f2
+ms.sourcegitcommit: 039263ff6271f318b471c4bf3dbc4b72659658ec
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/05/2019
-ms.locfileid: "55731299"
+ms.lasthandoff: 02/06/2019
+ms.locfileid: "55756741"
