--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -61,7 +61,7 @@ items:
 - name: Begrepp
   items:
   - name: Azure-hantering
-    href: azure-management.md?toc=/azure/azure-monitor/toc.json
+    href: azure-management.md
   - name: Kontinuerlig övervakning
     href: continuous-monitoring.md
   - name: Övervaka data
@@ -135,7 +135,7 @@ items:
     - name: Aktivitetsloggaviseringar
       href: platform/activity-log-alerts.md
   - name: Visualisera data
-    href: visualizations.md?toc=/azure/azure-monitor/toc.json
+    href: visualizations.md
   - name: Partnerintegrering
     href: platform/partners.md
   - name: VANLIGA FRÅGOR OCH SVAR
@@ -195,9 +195,9 @@ items:
         - name: Windows-agenter
           href: platform/agent-windows.md
         - name: VM-tillägg för Windows
-          href: ../virtual-machines/windows/extensions-oms.md?toc=/azure/azure-monitor/toc.json
+          href: ../virtual-machines/windows/extensions-oms.md
         - name: VM-tillägg för Linux
-          href: ../virtual-machines/linux/extensions-oms.md?toc=/azure/azure-monitor/toc.json
+          href: ../virtual-machines/linux/extensions-oms.md
         - name: Operations Manager
           href: platform/om-agents.md
         - name: Log Analytics-gatewayen
@@ -287,7 +287,7 @@ items:
           - name: Profiler-felsökning
             href: app/profiler-troubleshooting.md
         - name: Diagnostik
-          href: ../application-insights/app-insights-azure-diagnostics.md?toc=/azure/azure-monitor/toc.json
+          href: ../application-insights/app-insights-azure-diagnostics.md
         - name: Förhandsgranskningar
           href: app/previews.md
       - name: ASP.NET-appar
@@ -354,7 +354,7 @@ items:
         - name: JavaScript
           href: app/javascript.md
       - name: Övervaka Azure Functions
-        href: ../azure-functions/functions-monitoring.md?toc=/azure/application-insights/toc.json
+        href: ../azure-functions/functions-monitoring.md
       - name: Distribuerad spårning
         items:
         - name: Lokal vidarebefordrare
@@ -397,7 +397,7 @@ items:
         - name: Inga data för .NET
           href: app/asp-net-troubleshoot-no-data.md
         - name: Felsökningsprogram för ögonblicksbilder
-          href: ../application-insights/app-insights-troubleshoot-snapshot-debugger.md?toc=/azure/azure-monitor/toc.json
+          href: ../application-insights/app-insights-troubleshoot-snapshot-debugger.md
         - name: Analytics
           href: app/analytics-troubleshooting.md
         - name: Java
@@ -604,7 +604,7 @@ items:
       - name: Key Vault-analys
         href: insights/azure-key-vault.md
       - name: Service Fabric-analys
-        href: ../service-fabric/service-fabric-diagnostics-oms-agent.md?toc=/azure/azure-monitor/toc.json
+        href: ../service-fabric/service-fabric-diagnostics-oms-agent.md
     - name: Övervaka andra resurser
       items:
       - name: Utvärdera AD-hälsa
@@ -653,7 +653,7 @@ items:
     - name: Diagramexempel i Metric Explorer
       href: platform/metric-chart-samples.md
     - name: Visa händelser i aktivitetsloggen
-      href: ../azure-resource-manager/resource-group-audit.md?toc=/azure/azure-monitor/toc.json
+      href: ../azure-resource-manager/resource-group-audit.md
     - name: Visa tjänstmeddelanden
       href: platform/service-notifications.md
     - name: Frågeloggdata
@@ -819,7 +819,7 @@ items:
       - name: VM Scale Sets för automatisk skalning med Resource Manager-mallar
         href: platform/autoscale-virtual-machine-scale-sets.md
       - name: Skala datorer i en skalningsuppsättning för virtuella datorer automatiskt
-        href: ../virtual-machine-scale-sets/virtual-machine-scale-sets-windows-autoscale.md?toc=/azure/azure-monitor/toc.json?toc=/azure/azure-monitor/toc.json
+        href: ../virtual-machine-scale-sets/virtual-machine-scale-sets-windows-autoscale.md?toc=/azure/azure-monitor/toc.json
       - name: Konfigurera webhooks och e-postaviseringar med automatisk skalning
         href: platform/autoscale-webhook-email.md
     - name: Tjänstmeddelanden
@@ -1023,9 +1023,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: d972d54cd81609ae16f7966795f16e5efe41e863
-ms.sourcegitcommit: 039263ff6271f318b471c4bf3dbc4b72659658ec
+ms.openlocfilehash: 96f79397b16212fe0897e0d03f57ffb7248118c8
+ms.sourcegitcommit: 415742227ba5c3b089f7909aa16e0d8d5418f7fd
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 02/06/2019
-ms.locfileid: "55752032"
+ms.locfileid: "55767132"
